@@ -11,10 +11,10 @@ php:
 node_js:
   - 0.6
 
-env:
-  - DB=mysql
-  - DB=sqlite3
-  - DB=postgres
+#env:
+#  - DB=mysql
+#  - DB=sqlite3
+#  - DB=postgres
 
 matrix:
   allow_failures:
@@ -30,16 +30,20 @@ before_script:
   - sleep 5
   - firefox http://localhost:1111/capture &
   - sleep 5
-  - sh -c "if [ '$DB' = 'mysql' ]; then mysql -u root < ./dist-docs/sample_schema_mysql.txt; fi"
-  - sh -c "if [ '$DB' = 'sqlite3' ]; then sqlite3 /tmp/sample.sq3 < ./dist-docs/sample_schema_sqlite.txt; fi"
-  - sh -c "if [ '$DB' = 'postgres' ]; then psql -c 'create database test_db;' -U postgres; fi"
-  - sh -c "if [ '$DB' = 'postgres' ]; then psql -U postgres -f ./dist-docs/sample_schema_pgsql.txt test_db; fi"
+  - mysql -u root < ./dist-docs/sample_schema_mysql.txt; fi"
+  - sqlite3 /tmp/sample.sq3 < ./dist-docs/sample_schema_sqlite.txt; fi"
+  - psql -c 'create database test_db;' -U postgres; fi"
+  - psql -U postgres -f ./dist-docs/sample_schema_pgsql.txt test_db; fi"
+#  - sh -c "if [ '$DB' = 'mysql' ]; then mysql -u root < ./dist-docs/sample_schema_mysql.txt; fi"
+#  - sh -c "if [ '$DB' = 'sqlite3' ]; then sqlite3 /tmp/sample.sq3 < ./dist-docs/sample_schema_sqlite.txt; fi"
+#  - sh -c "if [ '$DB' = 'postgres' ]; then psql -c 'create database test_db;' -U postgres; fi"
+#  - sh -c "if [ '$DB' = 'postgres' ]; then psql -U postgres -f ./dist-docs/sample_schema_pgsql.txt test_db; fi"
   - cd develop-im/INTER-Mediator-UnitTest
-  - sh -c "if [ '$DB' = 'sqlite3' ]; then cat DB_PDO_Test.php | sed -e 's/mysql:dbname=test_db;host=127.0.0.1/sqlite:\/tmp\/sample.sq3/'; fi"
-  - sh -c "if [ '$DB' = 'postgres' ]; then cat DB_PDO_Test.php | sed -e s/mysql\:dbname=test_db\;host=127.0.0.1/pgsql\:host=127.0.0.1\;port=5432\;dbname=test_db/ > DB_PDO_Test.tmp; mv DB_PDO_Test.tmp DB_PDO_Test.php; fi"
+#  - sh -c "if [ '$DB' = 'sqlite3' ]; then cat DB_PDO_Test.php | sed -e 's/mysql:dbname=test_db;host=127.0.0.1/sqlite:\/tmp\/sample.sq3/'; fi"
+#  - sh -c "if [ '$DB' = 'postgres' ]; then cat DB_PDO_Test.php | sed -e s/mysql\:dbname=test_db\;host=127.0.0.1/pgsql\:host=127.0.0.1\;port=5432\;dbname=test_db/ > DB_PDO_Test.tmp; mv DB_PDO_Test.tmp DB_PDO_Test.php; fi"
 
 script:
-  - phpunit DB_PDO_Test.php
+  - phpunit DB_PDO-MySQL_Test.php
   - phpunit DB_Proxy_Test.php
   - phpunit INTERMediator_Test.php
   - cd ../..
